add handler tests
