# docs/static/api/swagger.json
@@ -29,6 +29,12 @@
                             "$ref": "#/definitions/handler.LastTradedPriceResponse"
                         }
                     },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/api.JSONError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
